--- a/GreenHouse/css/style.css
+++ b/GreenHouse/css/style.css
@@ -2363,7 +2363,8 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   transform: rotate(90deg);
 }
 
-.popup_callback .popup__body {
+.popup_callback .popup__body,
+.popup_order .popup__body {
   background: #242424;
   -webkit-box-shadow: 0px 0px 31.7688px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 0px 31.7688px rgba(0, 0, 0, 0.1);
@@ -2372,11 +2373,13 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   padding: 0;
 }
 
-.popup_callback .popup__body .request__block:before {
+.popup_callback .popup__body .request__block:before,
+.popup_order .popup__body .request__block:before {
   display: none;
 }
 
-.popup_callback .popup__body .request__left:before {
+.popup_callback .popup__body .request__left:before,
+.popup_order .popup__body .request__left:before {
   top: -220px;
 }
 
@@ -4195,7 +4198,7 @@ section {
 }
 
 .card__link:hover {
-  border-color: transparent;
+  border-color: #171717;
   background: -o-linear-gradient(356.87deg, #dbb878 -5.12%, #975a22 97.89%);
   background: linear-gradient(93.13deg, #dbb878 -5.12%, #975a22 97.89%);
 }
@@ -4493,6 +4496,10 @@ section {
 }
 
 .request__content-item {
+  text-align: center;
+}
+
+.request__form {
   text-align: center;
 }
 
@@ -6176,6 +6183,8 @@ textarea.input {
 }
 
 .info-spollers__price {
+  display: inline-block;
+  padding-left: 10px;
   float: right;
 }
 
@@ -6212,6 +6221,57 @@ textarea.input {
 
 .info-price__value:after {
   font-size: 20px;
+}
+
+._off {
+  padding-right: 0;
+  cursor: default;
+}
+
+._off:after {
+  display: none;
+}
+
+._withCheck input[type="checkbox"] {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+._withCheck input[type="checkbox"] + label {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+._withCheck input[type="checkbox"] + label:before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  border: 1px solid #975a22;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 50% 50%;
+  vertical-align: middle;
+}
+
+._withCheck input[type="checkbox"]:checked + label:before {
+  border-color: #975a22;
+  background-color: #975a22;
+  background-image: url("../img/icons/check.svg");
+}
+
+label[for^="point-"] {
+  cursor: pointer;
 }
 
 .noUi-target,
@@ -8122,6 +8182,7 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
 .productpage .interior__arrows .slider__prev:before{background-image:url("../img/icons/arrow.webp")}
 .productpage .interior__arrows .slider__next:before{background-image:url("../img/icons/arrow.webp")}
 .info-spollers__head:after{background-image:url("../img/icons/shevron.svg")}
+._withCheck input[type="checkbox"]:checked + label:before{background-image:url("../img/icons/check.svg")}
 .breadcrumbs__link::before{background-image:url("../img/icons/arrow-breadcrumbs.webp")}
 .catalog:before{background-image:url("../img/catbg-1.webp")}
 .catalog:after{background-image:url("../img/catbg-2.webp")}
