--- a/GreenHouse/css/style.css
+++ b/GreenHouse/css/style.css
@@ -2398,26 +2398,13 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 
 .header__logo {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  height: 45px;
+  width: 70px;
 }
 
-.header__logo .logo__link {
-  font-size: 37px;
-  line-height: 33px;
-  margin-right: 0;
-}
-
-.header__logo .logo__text {
-  font-size: 10px;
-  line-height: 12px;
-  width: auto;
-}
-
-.header__logo .logo__text:before {
-  display: none;
+.header__logo img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .header__contacts {
@@ -2658,7 +2645,14 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 
 .footer__logo {
-  margin-bottom: 25px;
+  height: 45px;
+  width: 70px;
+  margin-bottom: 30px;
+}
+
+.footer__logo img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .footer__contacts .phone__link {
@@ -7738,17 +7732,6 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
         -ms-transform: rotate(45deg);
             transform: rotate(45deg);
     bottom: calc(50% - 1px);
-  }
-
-  .footer__logo {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-top: 20px;
-  }
-
-  .footer__logo .logo__text {
-    display: none;
   }
 
   .footer__callback {
